What's New for OpenJPEG

* : fixed
- : removed
! : changed
+ : added

March 5,2010
! [FOD] Updated makefiles for v1.4 and v2.0

February 16, 2010
* [FOD] Fixed libopenjpeg Makefile 

January 20, 2010
! [FOD] Created a new constant in openjpeg.h to differentiate the case when the colorspace is not supported by the library and when it is not specified in the codestream. Suggested by Matteo Italia.  

September 10, 2009
* [antonin] fixed minor bugs which were triggering warnings at compilation (different signedness, wrong pointer type, etc)

August 21, 2008
* [antonin] found a bug in tcd.c that was preventing to find the correct threshold in tcd_rateallocate.c for high-precision images. Applied a temporary patch but a better solution should be found.

August 8, 2008
! [FOD] Modified the way raw images with more that 8bpp are read and written

August 2nd, 2008
* [Mathieu Malaterre] remove INLINE from forward decl. Fix CMakeLists.txt for UNIX platforms

August 1st, 2008
- [antonin] removed t1_generate_luts.c, useless in version 2.
! [antonin] updated XCode project file for mac users.

---------------------------
July 31, 2008
CREATION OF A OPJ V2 BRANCH
---------------------------

July 31, 2008
+ [antonin] created a branch for openjpeg version 2. Modifications that have been applied to the trunk after revision 483 should be re-applied on the branch (version 2 has been developed based on revision 483).

July 9, 2008
+ [Parvatha] Added the default lossless parameter to opj_set_default_encoder_parameters in openjpeg.c.

June 12, 2008
* [antonin] fixed a bug in dirent.h that prevented codec on Linux Alpha Systems to compile correctly. Thanks to RobinC.

May 22, 2008
* [antonin] fixed a bug in j2k.c (j2k_write_sod) that allowed to get negative rates, thanks zhong1985624 for pointing this.

May 22, 2008
* [antonin] additional test to avoid crash due to invalid image size, patch by Christopher Layne

May 20, 2008